--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">OMG No vas a creerme marica pero</h1>
+      <h1 class="mt-5">OMG No vas a creerme pero</h1>
       <h1 id="excuse">
         Mi perro vomitó en el presidente
       </h1>
